# rust-brighton-embedded-day-4

./: .gitignore  Cargo.toml  README.md  openocd.gdb
src/: main.rs
